namespace Vis.Server.Models;

public enum VisitorEventEnum
{
    In = 0,
    Out = 1
}